Práctica 3.3/Practica3.3AlvaroCorrochanoValentineDoutriaux/Entrega 1/iptables-rules.txt
# Generated by iptables-save v1.4.14 on Sun May 10 13:26:59 2020
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
:LOGDROP - [0:0]
-A INPUT -i lo -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth1 -j ACCEPT
-A FORWARD -s 192.168.1.0/24 -i eth2 -p tcp -m tcp --dport 80 -j LOG --log-prefix "IP Spoofing"
-A FORWARD ! -s 192.168.1.0/24 -i eth1 -p tcp -m tcp --dport 80 -j LOG --log-prefix "IP Spoofing"
-A FORWARD -s 192.168.1.0/24 -i eth2 -p tcp -m tcp --dport 80 -j DROP
-A FORWARD ! -s 192.168.1.0/24 -i eth1 -p tcp -m tcp --dport 80 -j DROP
-A FORWARD -p tcp -m conntrack --ctstate NEW -m tcp --dport 22 -j ACCEPT
-A FORWARD -d 192.168.1.10/32 -p tcp -m conntrack --ctstate NEW -m tcp --dport 80 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A LOGDROP -j LOG
-A LOGDROP -j DROP
COMMIT
# Completed on Sun May 10 13:26:59 2020
